# examforge

./: .env.example  CONTRIBUTING.md  README.md  config.example.yaml  index.html  pyproject.toml  requirements.txt
examples/: advanced.py  basic.py  generate_exam.py
src/: __main__.py  core.py  health.py  utils.py
src/examforge/: __init__.py  cli.py  exam.py  models.py  parser.py  report.py
src/examforge/generator/: __init__.py  bloom.py  essay.py  mcq.py  short_answer.py
src/examforge/grader/: __init__.py  auto_grader.py  essay_grader.py  rubric.py
tests/: test_benchmark.py  test_core.py  test_generator.py  test_grader.py  test_integration.py
