[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "examforge"
version = "0.1.0"
description = "AI-powered exam generator with Bloom's taxonomy tagging, rubric-based grading, and rich reporting."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Mukunda Katta"},
]
dependencies = [
    "click>=8.1",
    "pydantic>=2.0",
    "rich>=13.0",
    "openai>=1.0",
]

[project.scripts]
examforge = "examforge.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
